1. fix out of stock logic 2. wrap time constraint above qty check 3. fine tune wording 4. implement error warning box-shaow

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -67,6 +67,9 @@
   margin-top: 10px;
 }
 #error {
-  font-size: 18px;
+  font-size: 25px;
   color:crimson;
+}
+.no_order{
+  font-size: 20px;
 }
